# burned

./: .gitignore  README.md  README.zh-CN.md  burned  burned.sh  index.html  package.json  pnpm-lock.yaml  release.sh  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/superpowers/plans/: 2026-03-24-connector-detail-and-real-pricing.md  2026-03-24-pricing-estimates.md  2026-03-24-source-detail-page.md  2026-03-24-trend-card-split.md  2026-03-25-burned-home-i18n-and-connector-analytics.md  2026-03-25-two-connector-focus-removal.md
docs/superpowers/specs/: 2026-03-24-burned-home-i18n-and-connector-analytics-design.md  2026-03-24-connector-detail-and-real-pricing-design.md  2026-03-25-two-connector-focus-design.md
scripts/: burned-cli.mjs  burned-cli.test.mjs  date-utils.test.mjs  dev-ports.mjs  dev-ports.test.mjs  dev-server.mjs  product-shell.test.mjs  release.mjs  release.sh  release.test.mjs  session-threads.test.mjs  tauri-dev.mjs
src/: App.tsx  app-copy.mjs  date-utils.mjs  i18n.ts  session-threads.mjs  showcase-copy.mjs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  pricing.rs  settings.rs
src-tauri/src/connectors/: antigravity.rs  cherry_studio.rs  claude_code.rs  codex.rs  cursor.rs  mod.rs
src/components/: ConnectorSessions.tsx  MetricTile.tsx  SessionTable.tsx  SourceStatusBoard.tsx  TodaySources.tsx  TrendExplorer.tsx  UsageBars.tsx
src/data/: empty-dashboard.ts  mock-dashboard.ts  schema.ts
