[package]
name = "burned"
version = "0.2.1"
description = "Burned desktop observability app"
authors = ["kbaicai"]
edition = "2021"

[lib]
name = "burned_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tiny_http = "0.12"
ureq = { version = "2.10", features = ["json"] }
walkdir = "2.5"
webbrowser = "1.0"
zip = "2.2"
